--- a/repoze/debug/static/debugui.html
+++ b/repoze/debug/static/debugui.html
@@ -4,13 +4,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>repoze.debug GUI</title>
-        <link rel="stylesheet" type="text/css" href="debugui.css"/>
-        <script type="text/javascript" src="debugui.js">/**/</script>
-        <script type="text/javascript" src="sarissa.js">/**/</script>
+        <link rel="stylesheet" type="text/css" href="debugui-html.css"/>
+        <link rel="stylesheet" type="text/css" href="debugui-shared.css"/>
+        <script type="text/javascript" src="debugui.js">
+            /**/</script>
+        <script type="text/javascript" src="sarissa.js">
+            /**/</script>
     </head>
     <body onload="debuginit();">
-        <h1>GUI</h1>
-        <p><button onclick="reloadFeed();">Reload</button></p>
-        <div id="output"/>
+        <div id="lhc">
+            <div id="tree" style="height:95%">x</div>
+            <button onclick="reloadFeed();">Reload</button>
+        </div>
+        <div id="selected-entry">x</div>
     </body>
 </html>
